refactor: keep token usage service Java-only